--- a/infra.tce.io_dtfs.yaml
+++ b/infra.tce.io_dtfs.yaml
@@ -915,6 +915,11 @@ spec:
                     description: Image is image to use for the component, it reflects
                       version of the component.
                     type: string
+                  logLevel:
+                    description: LogLevel defines log level, for example, ["com.tencent.cloud.dtf=DEBUG"]
+                    items:
+                      type: string
+                    type: array
                   nettyPort:
                     description: NettyPort is netty port.
                     type: integer
@@ -968,6 +973,11 @@ spec:
                     description: Image is image to use for the component, it reflects
                       version of the component.
                     type: string
+                  logLevel:
+                    description: LogLevel defines log level, for example, ["com.tencent.cloud.dtf=DEBUG"]
+                    items:
+                      type: string
+                    type: array
                   nettyPort:
                     description: NettyPort is netty port.
                     type: integer
@@ -1096,6 +1106,18 @@ spec:
                 type: string
               serverIP:
                 description: VIP of dtf server.
+                type: string
+              managerClusterIPv6:
+                description: Cluster IPv6 of dtf manager.
+                type: string
+              managerIPv6:
+                description: VIPv6 of dtf manager.
+                type: string
+              serverClusterIPv6:
+                description: Cluster IPv6 of dtf server.
+                type: string
+              serverIPv6:
+                description: VIPv6 of dtf server.
                 type: string
               status:
                 description: Status reflects the overall status of the dtf instance.
