--- a/infra.tce.io_dtfs.yaml
+++ b/infra.tce.io_dtfs.yaml
@@ -1009,6 +1009,10 @@ spec:
               solution:
                 description: Solution name, tce or tcs.
                 type: string
+              tdsqlClusterIndex:
+                description: TdsqlClusterIndex indicates which tdsql cluster to use,
+                  this field is used only when solution is "tce".
+                type: integer
               tolerations:
                 description: Tolerations specifies the pod's tolerations.
                 items:
@@ -1109,18 +1113,6 @@ spec:
                 type: string
               serverIP:
                 description: VIP of dtf server.
-                type: string
-              managerClusterIPv6:
-                description: Cluster IPv6 of dtf manager.
-                type: string
-              managerIPv6:
-                description: VIPv6 of dtf manager.
-                type: string
-              serverClusterIPv6:
-                description: Cluster IPv6 of dtf server.
-                type: string
-              serverIPv6:
-                description: VIPv6 of dtf server.
                 type: string
               status:
                 description: Status reflects the overall status of the dtf instance.
