--- a/infra.tce.io_dtfs.yaml
+++ b/infra.tce.io_dtfs.yaml
@@ -1117,6 +1117,27 @@ spec:
               managerClusterIP:
                 description: Cluster IP of dtf manager.
                 type: string
+              managerIP:
+                description: VIP of dtf manager.
+                type: string
+              serverClusterIP:
+                description: Cluster IP of dtf server.
+                type: string
+              serverIP:
+                description: VIP of dtf server.
+                type: string
+              managerClusterIPv6:
+                description: Cluster IPv6 of dtf manager.
+                type: string
+              managerIPv6:
+                description: VIPv6 of dtf manager.
+                type: string
+              serverClusterIPv6:
+                description: Cluster IPv6 of dtf server.
+                type: string
+              serverIPv6:
+                description: VIPv6 of dtf server.
+                type: string
               addresses:
                 description: VIP of dtf.
                 type: array
@@ -1139,15 +1160,6 @@ spec:
                       description: zone of dtf service vip.
                       type: string
                   type: object
-              serverClusterIP:
-                description: Cluster IP of dtf server.
-                type: string
-              managerClusterIPv6:
-                description: Cluster IPv6 of dtf manager.
-                type: string
-              serverClusterIPv6:
-                description: Cluster IPv6 of dtf server.
-                type: string
               status:
                 description: Status reflects the overall status of the dtf instance.
                 type: string
